# mockserial

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
src/mockserial/: __init__.py  core.py  mock_serial.py
tests/: test_mock_serial.py
